# pyprojex

./: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
docker/builder/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
src/pkg1/: __init__.py  conf.json  main.py
src/pkg2/: main.py
src/toexclude/: __init__.py
tests/pkg1/: exists.py  test_exists.py
